1. Исключение реализации Physic с помощью ENABLE_PHYSIC 2. ПОчинка сборки.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -14,7 +14,7 @@ FILE(GLOB_RECURSE PROJECT_SOURCE ${PROJECT_DIR_FILES}/*.cpp)
 source_group(TREE ${PROJECT_DIR_FILES} TREE PREFIX "" FILES ${PROJECT_INCLUDE} ${PROJECT_SOURCE})
 
 # defines
-message("CMAKE_PLATFORM: ${CMAKE_PLATFORM}")
+message("PLATFORM: ${PLATFORM}")
 
 if(ENABLE_PHYSIC)
 	add_definitions(-DENABLE_PHYSIC)
@@ -87,7 +87,7 @@ set(GLEW_LIB "${PROJECT_DIR}/../lib")
 # FreeImage
 set(FREEIMAGE_NAME FreeImage)
 set(FREEIMAGE_DIR "${ENGINE_DIR}/ThirdParty/FreeImage")
-set(FREEIMAGE_LIB "${FREEIMAGE_DIR}/build/${CMAKE_PLATFORM}/Release")
+set(FREEIMAGE_LIB "${FREEIMAGE_DIR}/build/${PLATFORM}/Release")
 set(FREEIMAGE_INCLUDES "${FREEIMAGE_DIR}/Source")
 
 # PhysX 4.1
