--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -75,14 +75,13 @@ set(GLFW_LIB "${PROJECT_DIR}/../build/Win/Engine/ThirdParty/glfw/src")
 FILE(GLOB_RECURSE GLFW_ALL_INCLUDES ${GLFW_INCLUDES}/*.h)
 FILE(GLOB_RECURSE GLFW_ALL_SOURCES ${GLFW_SOURCE}/*.cpp)
 
-# GLEW
-set(GLEW_NAME glew)
-#set(GLEW_S_NAME glew_s)
-set(GLEW_DIR "${ENGINE_DIR}/ThirdParty/glew")
-set(GLEW_CMAKE_DIR "${GLEW_DIR}/build/cmake")
-set(GLEW_INCLUDES "${GLEW_DIR}/include")
-set(GLEW_SOURCE "${GLEW_DIR}/src")
-set(GLEW_LIB "${PROJECT_DIR}/../lib")
+# GLAD
+set(GLAD_NAME glad)
+set(GLAD_DIR "${ENGINE_DIR}/ThirdParty/glad")
+set(GLAD_INCLUDES "${GLAD_DIR}/include")
+set(GLAD_SOURCE "${GLAD_DIR}/src")
+set(GLAD_CMAKE_DIR "${GLAD_DIR}")
+set(GLAD_LIB "${PROJECT_DIR}/../lib")
 
 # FreeImage
 set(FREEIMAGE_NAME FreeImage)
@@ -151,12 +150,11 @@ link_directories(${GLFW_LIB})
 add_subdirectory(${GLFW_DIR})
 target_link_libraries(${PROJECT_NAME} ${GLFW_NAME})
 
-# glEw
-include_directories(${GLEW_INCLUDES})
-link_directories(${GLEW_LIB})
-add_subdirectory(${GLEW_CMAKE_DIR})
-set_target_properties( ${GLEW_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_DIR}/../Executable")
-target_link_libraries(${PROJECT_NAME} ${GLEW_NAME})
+# glad
+include_directories(${GLAD_INCLUDES})
+link_directories(${GLAD_LIB})
+add_subdirectory(${GLAD_CMAKE_DIR})
+target_link_libraries(${PROJECT_NAME} ${GLAD_NAME})
 
 # FreeImage
 include_directories(${FREEIMAGE_INCLUDES})
