Перенос CUDA в основной проект.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -113,11 +113,10 @@ set(GLFW_LIB "${PROJECT_DIR}/../build/Win/Engine/ThirdParty/freetype2")
 find_package(CUDA)
 if (CUDA_FOUND)
 	set(CUDA_NAME CUDA_lib)
-	set(CUDA_DIR "${ENGINE_DIR}/CUDA")
+	set(CUDA_DIR "${PROJECT_DIR}/CUDA")
 
 	add_definitions(-DENABLE_CUDA)
 	add_subdirectory(${CUDA_DIR})
-	#target_link_libraries(${PROJECT_NAME} ${CUDA_NAME})
 	message("CUDA founded.")
 else()
 	message("CUDA not founded.")
