Столкновение объектов в многопоточной механике.
https://ru.yougile.com/team/21ebaa6bd2b3/#GRA-2

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -114,6 +114,7 @@ endif()
 
 set(CUDA_NAME CUDA_lib)
 set(CUDA_DIR "${PROJECT_DIR}/CUDA")
+set(CUDA_SOURCE "${CUDA_DIR}/Source")
 add_subdirectory(${CUDA_DIR})
 
 # Создание
