Столкновение объектов в многопоточной механике. 1. SpaceGpuX1, слияние объектов с CPU и GPU 2. Изменение названия CUDA-библиотеки. https://ru.yougile.com/team/21ebaa6bd2b3/#GRA-2

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -112,7 +112,7 @@ else()
 	message("CUDA not founded.")
 endif()
 
-set(CUDA_NAME CUDA_lib)
+set(CUDA_NAME CUDA)
 set(CUDA_DIR "${PROJECT_DIR}/CUDA")
 set(CUDA_SOURCE "${CUDA_DIR}/Source")
 add_subdirectory(${CUDA_DIR})
