--- a/Source/Game/CMakeLists.txt
+++ b/Source/Game/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(${ENGINE_SOURCE})
 include_directories(${GLM_INCLUDES})
 include_directories(${JSONCPP_INCLUDES})
 include_directories(${GLFW_INCLUDES})
+include_directories(${GLAD_INCLUDES})
 include_directories(${FREEIMAGE_INCLUDES})
 include_directories(${IMGUI_INCLUDES})
 include_directories(${FREETYPE2_INCLUDES})
